10117
It should issue the same implementation restriction as:
```
scala> class C { def foo(a: Int = 0) = 0; def foo(a: Int = 0, b: Any) = 0 }
<console>:7: error: in class C, multiple overloaded alternatives of method foo define default arguments.
       class C { def foo(a: Int = 0) = 0; def foo(a: Int = 0, b: Any) = 0 }
             ^
```
